--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Turístico</title>
   </head>
-
-  <body>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+ 
+<body>
     <header id="cabecalho">
-      <div>Sua próxima viagem</div>
+      <div id="headline">Sua próxima viagem</div>
       <h1>Conheça Busan</h1>
     </header>
 
     <img
       src="assets/mainimage.jpg"
       alt="imagem panorâmica da cidade de Busan na Coréia do Sul"
-    />
-    <span
-      >Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde
+    /><br>
+
+    <div id="subtitle">
+      Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde
       churrascarias de primeira linha até tradicionais barracas de comida de
       rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as
-      suas ofertas culinárias.</span
-    >
+      suas ofertas culinárias.</div>
 
     <main>
       <section id="intro">
@@ -40,10 +46,10 @@
         </p>
       </section>
 
-      <ol>
+        <ol>
       <section id="yong">
         <img src="assets/list1.jpg" alt="imagem do tempo Haedong Yonggungsa em Busan"/>
-        <li><h3>Templo Haedong Yonggungsa </h3></li>
+        <li><h3 id="title">Templo Haedong Yonggungsa </h3></li>
         <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.<br>
             Bom para:<br>
         </p>
@@ -56,7 +62,7 @@
 
       <section id="beo">
         <img src="assets/list2.jpg" alt="imagem do templo Beomeo-sa em Busan"/>
-        <li><h3>Templo Beomeo-sa </h3></li>
+        <li><h3 id="title">Templo Beomeo-sa </h3></li>
         <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.<br>
             Bom para:<br>
         </p>
@@ -69,7 +75,7 @@
 
       <section id="parque">
         <img src="assets/list3.jpg" alt="imagem do parque Yongdusan em Busan"/>
-        <li><h3>Parque Yongdusan</h3></li>
+        <li><h3 id="title">Parque Yongdusan</h3></li>
         <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
             <br>
             Bom para:<br>
@@ -80,7 +86,7 @@
             <li>Orçamento</li>
         </ul>
       </section>
-    </ol>
+        </ol>
 
     <p id="description">As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo.</p>
 
